force-app/main/default/objects/Lead/fields/Amount_of_Material__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Material__c</fullName>
    <inlineHelpText>What amount of material is the lead looking for?</inlineHelpText>
    <label>Amount of Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MOQ - 999</fullName>
            </value>
            <value>
                <fullName>1000 - 4999</fullName>
            </value>
            <value>
                <fullName>5000 - 9999</fullName>
            </value>
            <value>
                <fullName>10000 - 24999</fullName>
            </value>
            <value>
                <fullName>25000 - above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>