force-app/main/default/objects/Lead/fields/Buy_Direct__c.field-meta.xml
<CustomField>
    <fullName>Buy_Direct__c</fullName>
    <inlineHelpText>Can the contact buy directly from FLEXcon?</inlineHelpText>
    <label>Buy Direct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>