force-app/main/default/objects/Lead/fields/Closed_Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Unqualified_Reason__c</fullName>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loss of Interest</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Can’t buy from FLEXcon</fullName>
            </value>
            <value>
                <fullName>No capabilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>