force-app/main/default/objects/Lead/fields/Die_Cut_Labels__c.field-meta.xml
<CustomField>
    <fullName>Die_Cut_Labels__c</fullName>
    <inlineHelpText>Is the lead looking for die cut labels?</inlineHelpText>
    <label>Die Cut Labels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>