force-app/main/default/objects/Lead/fields/General_Application__c.field-meta.xml
<CustomField>
    <fullName>General_Application__c</fullName>
    <inlineHelpText>Short summary what the material should be used for and how it is being produced</inlineHelpText>
    <label>General Application</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>