force-app/main/default/objects/Lead/fields/Interest_in_Self_Adhesive__c.field-meta.xml
<CustomField>
    <fullName>Interest_in_Self_Adhesive__c</fullName>
    <inlineHelpText>Does FLEXcon have the product/material capabilities to fulfill the request</inlineHelpText>
    <label>Interest in Self Adhesive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>