force-app/main/default/objects/Lead/fields/Lead_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Lead_Requirements__c</fullName>
    <inlineHelpText>What does the customer expect from Flexcon. (Quality, lead time, etc.)</inlineHelpText>
    <label>Lead Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>