force-app/main/default/objects/Lead/fields/Legitimate_Company__c.field-meta.xml
<CustomField>
    <fullName>Legitimate_Company__c</fullName>
    <inlineHelpText>Is the contact a legitimate company that exists with a valid email? If yes but a school, etc. add note in comments field.</inlineHelpText>
    <label>Does the Company Exist?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>