force-app/main/default/objects/Lead/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PB</fullName>
                <label>Product Branding</label>
            </value>
            <value>
                <fullName>PI</fullName>
                <label>Product Identification</label>
            </value>
            <value>
                <fullName>PP</fullName>
                <label>Performance Products</label>
            </value>
            <value>
                <fullName>XX</fullName>
                <label>Not Assigned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>