force-app/main/default/objects/Lead/fields/Marketing_Types__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Types__c</fullName>
    <label>Marketing Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AD Specialty</fullName>
            </value>
            <value>
                <fullName>After Market Prod Decoration</fullName>
            </value>
            <value>
                <fullName>Aircraft</fullName>
            </value>
            <value>
                <fullName>Appliance</fullName>
            </value>
            <value>
                <fullName>Arena/Stadium</fullName>
            </value>
            <value>
                <fullName>ATM Machine</fullName>
            </value>
            <value>
                <fullName>Automotive Exterior</fullName>
            </value>
            <value>
                <fullName>Automotive Interior</fullName>
            </value>
            <value>
                <fullName>Automotive Underhood</fullName>
            </value>
            <value>
                <fullName>Beverage</fullName>
            </value>
            <value>
                <fullName>Bumper Stickers</fullName>
            </value>
            <value>
                <fullName>CBS Outdoor Wrap Vendor 2012</fullName>
            </value>
            <value>
                <fullName>CBS Outdoor Wrap Vendor 2014</fullName>
            </value>
            <value>
                <fullName>CBS WRAP VENDORS 2008</fullName>
            </value>
            <value>
                <fullName>Cling Vinyl</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Consumer Battery</fullName>
            </value>
            <value>
                <fullName>Consumer Electronics</fullName>
            </value>
            <value>
                <fullName>Drum Label</fullName>
            </value>
            <value>
                <fullName>Exercise Equipment</fullName>
            </value>
            <value>
                <fullName>Fleet/Vehicle</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>G7 Certified</fullName>
            </value>
            <value>
                <fullName>Golf Carts</fullName>
            </value>
            <value>
                <fullName>GPI</fullName>
            </value>
            <value>
                <fullName>Hand Tools</fullName>
            </value>
            <value>
                <fullName>Health &amp; Beauty</fullName>
            </value>
            <value>
                <fullName>Heavy Equipment</fullName>
            </value>
            <value>
                <fullName>Holiday,Seasonal,Novelty</fullName>
            </value>
            <value>
                <fullName>Household &amp; Chemical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>