force-app/main/default/objects/Lead/fields/Other_Department__c.field-meta.xml
<CustomField>
    <fullName>Other_Department__c</fullName>
    <inlineHelpText>Fill in the &apos;other&apos; department selected in the above option</inlineHelpText>
    <label>Other Department</label>
    <length>50</length>
    <type>Text</type>
</CustomField>