force-app/main/default/objects/Lead/fields/PA_per_delivery__c.field-meta.xml
<CustomField>
    <fullName>PA_per_delivery__c</fullName>
    <label>PA/per delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Annum</fullName>
            </value>
            <value>
                <fullName>Per Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>