force-app/main/default/objects/Lead/fields/Primary_Vertical_Market__c.field-meta.xml
<CustomField>
    <fullName>Primary_Vertical_Market__c</fullName>
    <inlineHelpText>This is the industry sector that the customer participates in. This is how the customer identifies themselves, not necessarily based on the product we sell. If account participates in more than one, then use the Secondary Vertical Market field.</inlineHelpText>
    <label>Primary Vertical Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction &amp; Energy</fullName>
            </value>
            <value>
                <fullName>Consumer Durables</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Retail &amp; Advertisement</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>