force-app/main/default/objects/Lead/fields/Printable_Material__c.field-meta.xml
<CustomField>
    <fullName>Printable_Material__c</fullName>
    <inlineHelpText>Should the material be printable?</inlineHelpText>
    <label>Printable Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>