force-app/main/default/objects/Lead/fields/Sub_market__c.field-meta.xml
<CustomField>
    <fullName>Sub_market__c</fullName>
    <label>Sub Market</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vertical_Market__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
            <value>
                <fullName>Out of Home Advertising</fullName>
            </value>
            <value>
                <fullName>Shelf Marking</fullName>
            </value>
            <value>
                <fullName>Stickers &amp; Decals</fullName>
            </value>
            <value>
                <fullName>Insulation</fullName>
            </value>
            <value>
                <fullName>Architectural</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Patient Care</fullName>
            </value>
            <value>
                <fullName>Pharmaceutical</fullName>
            </value>
            <value>
                <fullName>DIagnostics / Wearables</fullName>
            </value>
            <value>
                <fullName>Electronic Hardware</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Portable Devices</fullName>
            </value>
            <value>
                <fullName>Petrochemical Drum</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Machinery</fullName>
            </value>
            <value>
                <fullName>Decoration</fullName>
            </value>
            <value>
                <fullName>Resealable Closures</fullName>
            </value>
            <value>
                <fullName>Appliances</fullName>
            </value>
            <value>
                <fullName>Power Tools</fullName>
            </value>
            <value>
                <fullName>Outdoor &amp; Fitness Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>