force-app/main/default/objects/Lead/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SQM</fullName>
            </value>
            <value>
                <fullName>SQFT</fullName>
            </value>
            <value>
                <fullName>MSI</fullName>
            </value>
            <value>
                <fullName>FT</fullName>
            </value>
            <value>
                <fullName>LM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>