force-app/main/default/objects/Lead/fields/Vertical_Market__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Market__c</fullName>
    <label>Vertical Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Retail &amp; Advertisement</fullName>
            </value>
            <value>
                <fullName>Construction &amp; Energy</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Consumer Durables</fullName>
            </value>
            <value>
                <fullName>XX</fullName>
                <isActive>false</isActive>
                <label>Not Assigned</label>
            </value>
            <value>
                <fullName>PP</fullName>
                <isActive>false</isActive>
                <label>Performance Products</label>
            </value>
            <value>
                <fullName>PB</fullName>
                <isActive>false</isActive>
                <label>Product Branding</label>
            </value>
            <value>
                <fullName>PI</fullName>
                <isActive>false</isActive>
                <label>Product Identification</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>