force-app/main/default/objects/Lead/recordTypes/General_Lead.recordType-meta.xml
<RecordType>
    <fullName>General_Lead</fullName>
    <active>true</active>
    <businessProcess>FLEXcon process</businessProcess>
    <label>General Lead</label>
</RecordType>