force-app/main/default/objects/Lead/validationRules/Closed_Unqualified_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Unqualified_Reason</fullName>
    <active>true</active>
    <description>Enforcement of Closed Unqualified Reason when stage becomes Closed Unqualified</description>
    <errorConditionFormula>AND(
TEXT(  Status  ) = &quot;Closed Unqualified&quot;,
ISPICKVAL(  Closed_Unqualified_Reason__c, &quot;&quot; )
)</errorConditionFormula>
    <errorMessage>Unqualified Reason is required</errorMessage>
</ValidationRule>