force-app/main/default/objects/Lead/validationRules/Country_field_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_field_cannot_be_blank</fullName>
    <active>true</active>
    <description>The country field for lead cannot be blank</description>
    <errorConditionFormula>ISBLANK( Country )</errorConditionFormula>
    <errorDisplayField>Country</errorDisplayField>
    <errorMessage>Country can&apos;t be blank</errorMessage>
</ValidationRule>