force-app/main/default/objects/Lead/validationRules/Enforce_Amount_of_Material.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Amount_of_Material</fullName>
    <active>true</active>
    <description>Amount of Material  is a required field for Qualifying Lead when status changed to closed qualified.</description>
    <errorConditionFormula>AND
(TEXT( Status )=&quot;Closed Qualified&quot;,
ISPICKVAL(Amount_of_Material__c,&quot;&quot;)
 )</errorConditionFormula>
    <errorDisplayField>Amount_of_Material__c</errorDisplayField>
    <errorMessage>Amount of Material  is a mandatory field</errorMessage>
</ValidationRule>