force-app/main/default/objects/Lead/validationRules/Enforce_Buy_Direct.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Buy_Direct</fullName>
    <active>true</active>
    <description>Buy Direct is a required field for Qualifying Lead</description>
    <errorConditionFormula>AND
(TEXT( Status )=&quot;Closed Qualified&quot;,
ISPICKVAL(Buy_Direct__c,&quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Buy_Direct__c</errorDisplayField>
    <errorMessage>Buy Direct is a mandatory field before conversion.</errorMessage>
</ValidationRule>