force-app/main/default/objects/Lead/validationRules/Enforce_Competitor.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Competitor</fullName>
    <active>true</active>
    <description>Competitor  is a required  field for Qualifying Lead</description>
    <errorConditionFormula>AND
(TEXT( Status )=&quot;Closed Qualified&quot;,
ISPICKVAL(Competitor__c,&quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Competitor__c</errorDisplayField>
    <errorMessage>Competitor  is a mandatory field</errorMessage>
</ValidationRule>