force-app/main/default/objects/Lead/validationRules/Enforce_Delivery.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Delivery</fullName>
    <active>true</active>
    <description>PA/ per delivery is a required field for Qualifying Lead</description>
    <errorConditionFormula>AND
(TEXT( Status )=&quot;Closed Qualified&quot;,
ISPICKVAL(  PA_per_delivery__c  ,&quot;&quot;)
 )</errorConditionFormula>
    <errorDisplayField>PA_per_delivery__c</errorDisplayField>
    <errorMessage>Please specify if the amount of material is  Per Annum or Per delivery</errorMessage>
</ValidationRule>