force-app/main/default/objects/Lead/validationRules/Enforce_Department.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Department</fullName>
    <active>true</active>
    <description>Department is a required field for Qualifying Lead</description>
    <errorConditionFormula>AND
(TEXT( Status )=&quot;Closed Qualified&quot;,
 ISPICKVAL( Department__c , &quot;&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Department__c</errorDisplayField>
    <errorMessage>Department is a mandatory field before conversion.</errorMessage>
</ValidationRule>