force-app/main/default/objects/Lead/validationRules/Enforce_General_Application.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_General_Application</fullName>
    <active>true</active>
    <description>General Application is a required field for Qualifying Lead</description>
    <errorConditionFormula>AND
(TEXT( Status )=&quot;Closed Qualified&quot;,
ISBLANK(General_Application__c)
 )</errorConditionFormula>
    <errorDisplayField>General_Application__c</errorDisplayField>
    <errorMessage>General Application is a mandatory field</errorMessage>
</ValidationRule>