force-app/main/default/objects/Lead/validationRules/Enforce_Interest_in_Self_Adhesive.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Interest_in_Self_Adhesive</fullName>
    <active>true</active>
    <description>Interest_in_Self_Adhesive__c is a required  field for Qualifying Lead</description>
    <errorConditionFormula>AND
(TEXT( Status )=&quot;Closed Qualified&quot;,
ISPICKVAL(Interest_in_Self_Adhesive__c,&quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Interest_in_Self_Adhesive__c</errorDisplayField>
    <errorMessage>Interest in self adhesive  is a mandatory field</errorMessage>
</ValidationRule>