force-app/main/default/objects/Lead/validationRules/Enforce_Lead_Source_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Lead_Source_Field</fullName>
    <active>true</active>
    <description>Lead source is a required  field for Qualifying Lead</description>
    <errorConditionFormula>ISPICKVAL(LeadSource,&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Lead Source is a mandatory field</errorMessage>
</ValidationRule>