force-app/main/default/objects/Lead/validationRules/Enforce_Legitimate_Company.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Legitimate_Company</fullName>
    <active>true</active>
    <description>Legitimate Company is a required  field for Qualifying Lead</description>
    <errorConditionFormula>AND
(TEXT( Status )=&quot;Closed Qualified&quot;,
ISPICKVAL(Legitimate_Company__c,&quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Legitimate_Company__c</errorDisplayField>
    <errorMessage>Legitimate Company is a mandatory field</errorMessage>
</ValidationRule>