force-app/main/default/objects/Lead/validationRules/Enforce_Other_Department.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Other_Department</fullName>
    <active>true</active>
    <description>Other department is a required  field for Qualifying Leads when the &apos;Other&apos; department is chosen.</description>
    <errorConditionFormula>AND
(TEXT(  Department__c  )=&quot;Other&quot;,
ISBLANK( Other_Department__c )
)</errorConditionFormula>
    <errorDisplayField>Other_Department__c</errorDisplayField>
    <errorMessage>Please enter &apos;Other&apos; Department as mentioned above</errorMessage>
</ValidationRule>