force-app/main/default/objects/Lead/validationRules/Enforce_Primary_Vertical_Market.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Primary_Vertical_Market</fullName>
    <active>true</active>
    <description>Primary Vertical Market is a required field for Qualifying Lead.</description>
    <errorConditionFormula>AND
(TEXT( Status )=&quot;Closed Qualified&quot;,
ISPICKVAL( Primary_Vertical_Market__c ,&quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Primary_Vertical_Market__c</errorDisplayField>
    <errorMessage>Primary Vertical Market is a mandatory field before conversion.</errorMessage>
</ValidationRule>