force-app/main/default/objects/Lead/validationRules/Picklist_State_Country.validationRule-meta.xml
<ValidationRule>
    <fullName>Picklist_State_Country</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
OR( 
Contains( Country , &quot;Australia&quot;), 
Contains(Country , &quot;Brazil&quot;), 
Contains(Country , &quot;Canada&quot;), 
Contains(Country , &quot;China&quot;), 
Contains(Country , &quot;Ireland&quot;), 
Contains(Country , &quot;India&quot;), 
Contains(Country , &quot;Italy&quot;), 
Contains(Country , &quot;Mexico&quot;), 
Contains(Country , &quot;United States&quot;)), 
ISBLANK(  State ))</errorConditionFormula>
    <errorMessage>Please select the correct state/province.</errorMessage>
</ValidationRule>