force-app/main/default/objects/Lead/validationRules/Unqualified.validationRule-meta.xml
<ValidationRule>
    <fullName>Unqualified</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(Status) = &quot;Unqualified&quot; &amp;&amp; TEXT ( Unqualified_Reason__c ) = &quot;&quot;</errorConditionFormula>
    <errorMessage>Unqualified Reason is Required</errorMessage>
</ValidationRule>