force-app/main/default/objects/Lead/listViews/APAC_Lead_Assignment_Lead.listView-meta.xml
<ListView>
    <fullName>APAC_Lead_Assignment_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC Lead Assignment</label>
    <queue>APAC_Lead_Assignment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>