force-app/main/default/objects/Lead/listViews/Canada_Central_Lead_Assignment_Lead.listView-meta.xml
<ListView>
    <fullName>Canada_Central_Lead_Assignment_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Canada Central Lead Assignment</label>
    <queue>Canada_Central_Lead_Assignment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>