force-app/main/default/objects/Lead/listViews/Canada_Lead_Assignment_Lead.listView-meta.xml
<ListView>
    <fullName>Canada_Lead_Assignment_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Canada Lead Assignment</label>
    <queue>Canada_Lead_Assignment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>