force-app/main/default/objects/Lead/listViews/Canada_Northeast_Lead_Assignment_Lead.listView-meta.xml
<ListView>
    <fullName>Canada_Northeast_Lead_Assignment_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Canada Eastern Lead Assignment</label>
    <queue>Canada_Eastern_Lead_Assignment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>