force-app/main/default/objects/Lead/listViews/Central_America_Lead_Assignment_Lead.listView-meta.xml
<ListView>
    <fullName>Central_America_Lead_Assignment_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Central America Lead Assignment</label>
    <queue>Central_America_Lead_Assignment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>